Adding signing key list and guid & test cases